cmake_minimum_required(VERSION 3.5)
get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${PROJECT_NAME} LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
include_directories(lib)
include_directories(tests)
aux_source_directory(src SRC_DIR)
aux_source_directory(tests TESTS_DIR)
add_executable(${PROJECT_NAME} ${SRC_DIR} ${TESTS_DIR})
